fix bug UI and custom scrollbar

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -24,6 +24,21 @@ body {
     line-height: 1.5;
     text-rendering: optimizeSpeed;
     color: $text-color;
+    overflow-y: overlay;
+}
+
+// scroll bar css
+html *::-webkit-scrollbar {
+    border-radius: 0px;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 // fonts emembeded
