--- a/src/components/Layout/Popper/Menu/Menu.module.scss
+++ b/src/components/Layout/Popper/Menu/Menu.module.scss
@@ -21,11 +21,15 @@
     padding-bottom: 8px;
 }
 
+.menu-body {
+    overflow-y: auto;
+}
 // header
 .header {
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 .back-btn {
     display: block;
