--- a/src/components/Layout/Popper/Popper.module.scss
+++ b/src/components/Layout/Popper/Popper.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
     width: 100%;
+    display: flex;
+    flex-direction: column;
     max-height: min((100vh - 96px) - 60px, 734px);
     background: rgb(255, 255, 255);
     min-height: 100px;
