--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -8,6 +8,11 @@ $search-btn-width: 52px;
     display: flex;
     justify-content: center;
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: var(--white);
 }
 .inner {
     height: 100%;
